external/lmgc90_dev-fortran_lib/src/ChiPy/kernel/wrap_nlgs_3D.h

//
// flat solver
//

/**
 * @fn void nlgs_3D_ExIter(int nb_iter)
 * @brief Executes nb_iter NLGS iterations
 *
 * @cond PYDOC
 * python usage : nlgs_3D_ExIter(nb_iter)
 * param[in] nb_iter (integer) : number of iterations to do
 * @endcond
 *
 * @cond CDOC
 * param[in] nb_iter (int) : number of iterations to do
 * @endcond
 */
 extern "C" void nlgs_3D_ExIter(int nb_iter);
/**
 * @fn void nlgs_3D_ExIterJacobi(int nb_iter)
 * @brief Executes nb_iter NLJacobi iterations
 *
 * @cond PYDOC
 * python usage : nlgs_3D_ExIterJacobi(nb_iter)
 * param[in] nb_iter (integer) : number of iterations to do
 * @endcond
 *
 * @cond CDOC
 * param[in] nb_iter (int) : number of iterations to do
 * @endcond
 */
 extern "C" void nlgs_3D_ExIterJacobi(int nb_iter);
/**
 * @fn int nlgs_3D_AfterIterCheck(void)
 * @brief Control NLGS convergence
 *
 * @cond PYDOC
 * python usage : convergence = nlgs_3D_AfterIterCheck()
 * @return convergence (integer) :
 * @endcond
 *
 * @cond CDOC
 * @return (int) convergence state
 * @endcond
 */
 extern "C" int nlgs_3D_AfterIterCheck(void);
/**
 * @fn int nlgs_3D_AfterIterCheckJacobi(void)
 * @brief Control NLGS convergence
 *
 * @cond PYDOC
 * python usage : convergence = nlgs_3D_AfterIterCheckJacobi()
 * @return convergence (integer) :
 * @endcond
 *
 * @cond CDOC
 * @return (int) convergence state
 * @endcond
 */
 extern "C" int nlgs_3D_AfterIterCheckJacobi(void);
/**
 * @fn void nlgs_3D_ScrambleContactOrder(void)
 * @brief Random renumbering of the contact list
 *
 * @cond PYDOC
 * python usage : nlgs_3D_ScrambleContactOrder()
 * @endcond
 */
 extern "C" void nlgs_3D_ScrambleContactOrder(void);
/**
 * @fn void nlgs_3D_QuickScrambleContactOrder(void)
 * @brief Random renumbering of the contact list
 *
 * @cond PYDOC
 * python usage : nlgs_3D_QuickScrambleContactOrder()
 * @endcond
 */
 extern "C" void nlgs_3D_QuickScrambleContactOrder(void);
/**
 * @fn void nlgs_3D_ReverseContactOrder(void)
 * @brief reverse the numbering of the contact list
 *
 * @cond PYDOC
 * python usage : nlgs_3D_ReverseContactOrder()
 * @endcond
 */
 extern "C" void nlgs_3D_ReverseContactOrder(void);
/**
 * @fn void nlgs_3D_DisplayAfterIterCheck(void)
 * @brief display NLGS convergence results
 *
 * @cond PYDOC
 * python usage : nlgs_3D_DisplayAfterIterCheck()
 * @endcond
 */
 extern "C" void nlgs_3D_DisplayAfterIterCheck(void);
/**
 * @fn void nlgs_3D_ScaleRloc(void)
 * @brief scale all local contact forces of a factor equal to 0.9 < f < 1.1
 *
 * @cond PYDOC
 * python usage : nlgs_3D_ScaleRloc()
 * @endcond
 */
 extern "C" void nlgs_3D_ScaleRloc(void);
/**
 * @fn void nlgs_3D_ComputeRnod(void)
 * @brief mapping from local contact forces to global ones
 *
 * @cond PYDOC
 * python usage : nlgs_3D_ComputeRnod()
 * @endcond
 */
 extern "C" void nlgs_3D_ComputeRnod(void);
/**
 * @fn void nlgs_3D_ExPost(void)
 * @brief run a jacobi iteration with the solution obtain with the NLGS algorithm
 *
 * @cond PYDOC
 * python usage : nlgs_3D_ExPost()
 * @endcond
 */
 extern "C" void nlgs_3D_ExPost(void);
/**
 * @fn void nlgs_3D_ExPostJacobi(void)
 * @brief run a jacobi iteration with the solution obtain with the NLGS algorithm
 *
 * @cond PYDOC
 * python usage : nlgs_3D_ExPostJacobi()
 * @endcond
 */
 extern "C" void nlgs_3D_ExPostJacobi(void);
/**
 * @fn void nlgs_3D_SetCheckType(char * checktype_c, double tol, double relax)
 * @brief define numerical convergence of the NLGS algorithm
 *
 * @cond PYDOC
 * python usage : nlgs_SetCheckType(check_type, tolerance, relaxation)
 * @param[in] chekctype_c (char[5]) : type of convergence check
 * @param[in] tol         (double)  : norm tolerance
 * @param[in] relax       (double)  : relaxation factor
 * @endcond
 *
 * \n convergence check keywords:\n 
 * Quad  : quadratic norm (faulty contacts are redeemed by accurate
 *         contacts; laxist norm)\n 
 * Maxm  : maximum norm (faulty contacts must comply; severe norm)\n 
 * QM/16 : maximum of Quad and Maxm/16 norms (a compromise). For
 *         large dense collections Quad ranges usually around 1/16 Maxm\n 
 * where Quad,Maxm,QM/16 are keywords for the check test, and the 
 * following real number is the tolerance value.\n 
 *
 * @cond CDOC
 * @param[in] chekctype_c (char[5]) : type of convergence check
 * @param[in] tol         (double)  : norm tolerance
 * @param[in] relax       (double)  : relaxation factor
 * @endcond
 */
 extern "C" void nlgs_3D_SetCheckType(char * checktype_c, double tol, double RELAX);
/**
 * @fn void nlgs_3D_ExPrep(char * storage_c)
 * @brief Prepare matrix storage
 *
 * @cond PYDOC
 * python usage : nlgs_ExPrep(storage)
 * @param[in] storage_c(char[30]) : matrix storage
 * @endcond
 *
 * \n prepare the matrix and the RHS of the contact problem
 * in regards of the selected matrix storage:\n 
 * - Exchange_Local_Global (the standard case)
 *  only the diagonal blocks are computed and stored.\n 
 * - Stored_Delassus_Loops (faster but memory expensive)
 *  the complete Delassus matrix is computed.\n 
 *
 * @cond CDOC
 * @param[in] storage_c (char[30]) : matrix storage
 * @endcond
 */
 extern "C" void nlgs_3D_ExPrep(char * storage_c);
/**
 * @fn void nlgs_3D_WriteNormCheck(void)
 * @brief write norm to file
 *
 * @cond PYDOC
 * python usage : nlgs_3D_WriteNormCheck()
 * @endcond
 */
 extern "C" void nlgs_3D_WriteNormCheck(void);
/**
 * @fn void nlgs_3D_DiagonalResolution(void)
 * @brief 
 *
 * @cond PYDOC
 * python usage : nlgs_3D_DiagonalResolution()
 * @endcond
 */
 extern "C" void nlgs_3D_DiagonalResolution(void);
//
//  macro solver
//

/**
 * @fn void nlgs_3D_SetWithQuickScramble(void)
 * @brief Activate quick scramble in macro function ExSolver
 *
 * @cond PYDOC
 * python usage : nlgs_3D_SetWithQuickScramble()
 * @endcond
 */
extern "C" void nlgs_3D_SetWithQuickScramble(void);
/**
 * @fn void nlgs_3D_SetWithReverseContactOrder(void)
 * @brief Activate reverse order in macro function ExSolver
 *
 * @cond PYDOC
 * python usage : nlgs_3D_SetWithReverseContactOrder()
 * @endcond
 */
extern "C" void nlgs_3D_SetWithReverseContactOrder(void);
/**
 * @fn void nlgs_3D_ExSolver(char * Wstorage_c, char * checktype_c, double tol, double RELAX, int nb_iter_check, int nb_block_iter)
 * @brief Solve fully the local contact problem
 *
 * @cond PYDOC
 * python usage : nlgs_3D_ExSolver(storage, checktype, tol, relax, nb_iter_check, nb_block_iter)
 * @param[in] storage (char[30])      : matrix storage (cf nlgs_ExPrep)
 * @param[in] checktype (char[5])     : convergentce test keyword
 * @param[in] tolerance (double)      : tolerance value
 * @param[in] relaxation (double)     : relaxation number
 * @param[in] nb_iter_check (integer) : number of iteration between convergence test
 * @param[in] nb_block_iter (integer) : number of block iterations
 * @endcond
 *
 * @cond CDOC
 * @param[in] Wstorage_c  (char[30]) : matrix storage (cf nlgs_ExPrep)
 * @param[in] checktype_c (char[5])  : convergentce test keyword
 * @param[in] tol         (double)   : tolerance value
 * @param[in] RELAX       (double)   : relaxation number
 * @param[in] nb_iter_check (int)    : number of iteration between convergence test
 * @param[in] nb_block_iter (int)    : number of block iterations
 * @endcond
 */
 extern "C" void nlgs_3D_ExSolver(char * Wstorage_c, char * checktype_c, double tol, double RELAX,
				int nb_iter_check, int nb_block_iter);
//
// common options and function
//

/**
 * @fn void nlgs_3D_UpdateTactBehav(void)
 * @brief update internal parameters of contact laws for each contact
 *
 * @cond PYDOC
 * python usage : nlgs_3D_UpdateTactBehav()
 * @endcond
 */
 extern "C" void nlgs_3D_UpdateTactBehav(void);